# ros_thymio

./: .gitignore  CLAUDE.md  PLAN_ISSUES_FIX.md  PLAN_ISSUES_FIX_done.md  PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_done.md  PROJECT_ARCHITECTURE_AND_ENGINEERING_SPEC.md  README.md  REFACTOR_PROPOSAL.md  analysis_results_0424.md  pytest.ini
docs/archived/old_test_scripts/: gaze_logic.py  manual_server.py  thymio_bridge.old.py  thymio_ros_cmd_vel_test.py  thymio_ros_gaze_all_in_one.py
enobio_recodes/: 20260330123659_Patient01.easy  20260408111446_Patient01.info
lsl_test/: conftest.py  demo.ipynb  edf_reader.py  edf_to_lsl.py  eeg_processor.py  raw_lsl_adapter.py  test_e2e_pipeline.py  test_edf_reader.py  test_edf_to_lsl.py  test_offline_analysis.py  test_raw_lsl_adapter.py  test_real_time_lsl.py  test_streaming_extractor.py
records/: 20260330123659_Patient01.info  all_data_with_types.csv  tcp_data.txt
src/old_test_scripts/: gaze_logic.old.py  thymio_all_in_one_tdm.py  thymio_bridge.py  tobii_to_ros.py
src/ros-aseba/: .gitignore  .gitmodules  README.md
src/ros-aseba/asebaros/: CMakeLists.txt  README.md  package.xml
src/ros-aseba/asebaros/aseba/aseba/clients/studio/: DashelTarget.cpp
src/ros-aseba/asebaros/aseba/aseba/common/msg/: TargetDescription.h
src/ros-aseba/asebaros/aseba/aseba/targets/challenge/: challenge.cpp
src/ros-aseba/asebaros/include/asebaros/: aseba_dashel_hub.h  aseba_script.h  asebaros_node.h  asebaros_node_manager.h  asebaros_node_manager_ros1.h  asebaros_node_manager_ros2.h  asebaros_node_ros1.h  asebaros_node_ros2.h  utils.h  utils_ros1.h  utils_ros2.h
src/ros-aseba/asebaros/src/: aseba_dashel_hub.cpp  aseba_script.cpp  asebaros_node.cpp  asebaros_node_manager.cpp  asebaros_node_manager_ros1.cpp  asebaros_node_manager_ros2.cpp  asebaros_node_ros1.cpp  asebaros_node_ros2.cpp
src/ros-aseba/asebaros_examples/: CMakeLists.txt  README.md  package.xml
src/ros-aseba/asebaros_examples/launch/: all_nodes.launch  single_node.aesl  single_node.launch  single_thymio.aesl  single_thymio.launch  twin_nodes.aesl  twin_nodes.launch  twin_thymios.aesl  twin_thymios.launch  two_nodes.aesl  two_nodes.launch  two_thymios.aesl  two_thymios.launch
src/ros-aseba/asebaros_examples/simulation/: multirobot.playground
src/ros-aseba/asebaros_msgs/: CMakeLists.txt  README.md  package.xml
src/ros-aseba/asebaros_msgs/msg/: AnonymousEvent.msg  Event.msg  Node.msg  NodeDescription.msg  NodeList.msg
src/ros-aseba/asebaros_msgs/srv/: GetDescription.srv  GetNodeList.srv  GetVariable.srv  LoadScript.srv  SetVariable.srv
src/ros-aseba/docker/foxy/: Dockerfile
src/ros-aseba/docker/galactic/: Dockerfile
src/ros-aseba/docker/melodic/: Dockerfile
src/ros-aseba/docker/noetic/: Dockerfile
src/ros-aseba/docs/: asebaros.html  asebaros_examples.html  asebaros_msgs.html  bridge.html  examples.html  genindex.html  getting_started.html  glossary.html  index.html  installation.html  introduction.html  objects.inv  search.html  searchindex.js  thymio.html  thymio_aseba_script.html  thymio_description.html  thymio_driver.html  thymio_examples.html  thymio_msgs.html
src/ros-aseba/docs/_sources/: asebaros.rst.txt  asebaros_examples.rst.txt  asebaros_msgs.rst.txt  bridge.rst.txt  examples.rst.txt  getting_started.rst.txt  glossary.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  thymio.rst.txt  thymio_aseba_script.rst.txt  thymio_description.rst.txt  thymio_driver.rst.txt  thymio_examples.rst.txt  thymio_msgs.rst.txt
src/thymio_web_bridge/: setup.cfg  setup.py
src/thymio_web_bridge/launch/: camera_bridge.launch.py
src/thymio_web_bridge/thymio_web_bridge/: __init__.py  gazebo_camera_bridge.py
src/thymio_web_bridge/thymio_web_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
thymio_control/: CMakeLists.txt  EEG_PIPELINE.md  ENOBIO_LAB_PREP.md  eeg_control_node.py  eeg_control_pipeline.py  eeg_thymio.launch.py  experiment_config.yaml  launch_args.yaml  package.xml  thymio_ros.py  wsl_enobio_bridge.py  wsl_tobii_bridge.py
thymio_control/config/: default.rviz  eeg_control_node.params.yaml  experiment_config.yaml  gaze_control_node.params.yaml  gz_bridge.yaml  launch_args.yaml  thymio_world.sdf
thymio_control/docs/: EEG_PIPELINE.md  ENOBIO_LAB_PREP.md  REFACTOR_PROPOSAL_ARCHIVED_20260405.md  THYMIO_CONTROL_CODE_GUIDE_ZH.md
thymio_control/launch/: eeg_thymio.launch.py  experiment_core.launch.py  gaze_thymio.launch.py
thymio_control/scripts/: eeg_control_node.py  gaze_control_node.py  thymio_ros.py
thymio_control/test/: __init__.py  test_config_loader.py  test_device_config.py  test_dynamic_pipeline.py  test_enobio_file_reader.py  test_feature_mapping.py  test_lsl_adapter.py  test_pipeline_integration.py  test_policy.py  test_tcp_client_adapter.py  test_tcp_parser.py
thymio_control/test/mock_data/: enobio_small.easy  enobio_small.info
thymio_control/thymio_control/: __init__.py  eeg_control_pipeline.py  enobio_file_reader.py  pipeline.py
thymio_control/thymio_control/adapters/: edf_file.py  lsl_raw.py
thymio_control/thymio_control/policies/: alpha_only.py  focus.py
thymio_control/tools/bridges/: wsl_tobii_bridge.py
thymio_control/tools/system/: prepare_usb.sh
thymio_tobii/: ENOBIO_LAB_PREP.md  eeg_control_pipeline.py  eeg_thymio.launch.py  launch_args.yaml  thymio_ros.py  wsl_enobio_bridge.py  wsl_tobii_bridge.py
thymio_tobii.bak/: EEG_PIPELINE.md  ENOBIO_LAB_PREP.md  eeg_control_node.py  eeg_thymio.launch.py  thymio_ros.py  wsl_tobii_bridge.py
thymio_web_bridge/: package.xml  setup.py
thymio_web_bridge/thymio_web_bridge/: gazebo_camera_bridge.py
web_gui/: DESIGN.md  README.md
web_gui/backend/: .env.example  requirements.txt
web_gui/backend/app/: command_runner.py  config_store.py  main.py  mock_stream.py  models.py  ros_probe.py  teleop_publisher.py  test_command_runner.py  test_config_store.py  test_teleop_publisher.py
web_gui/frontend/: index.html  package-lock.json  package.json  vite.config.js
web_gui/frontend/src/: App.jsx  api.js  styles.css
(+5 files in other folders)
