<?xml version="1.0"?>
<package format="3">
  <name>thymio_control</name>
  <version>0.0.0</version>
  <description>Compatibility package providing thymio control launch and scripts.</description>
  <maintainer email="robot@example.com">robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>thymio_description</exec_depend>
  <exec_depend>thymio_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
