<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asebaros</name>
  <version>0.1.0</version>
  <description>
    Bridge to access an Aseba network from ROS.
    For more information about Aseba, see: http://aseba.wikidot.com
  </description>
  <maintainer email="jerome@idsia.ch">Jérôme Guzzi</maintainer>
  <license>BSD</license>
  <url type="website">http://jeguzzi.github.io/ros-aseba</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>asebaros_msgs</build_depend>
  <exec_depend>asebaros_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
